--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   Pasztecik szczeciński
 </center>
 </h3>
-<img src="pasztecik.jpg" alt="paprykarz" width="320" height="230">
+<img src="pasztecik.jpg" alt="pasztecik" width="320" height="230">
 <p class="srodek">Przekąska składająca się z ciasta drożdżowego smażonego na głębokim tłuszczu,
   przeważnie wypełniona serem i pieczarkami, mięsem lub szpinakiem.
   Tradycyjnie, do pasztecika powinno się pić barszcz czerwony.
@@ -79,7 +79,7 @@
       </center>
     </h3>
         <p class="srodek">
-        W Szczecinie znajduje się również nagradzana w wielu konkursach architektonicznych filharmonia. Wieczorami jest oświetlana różnymi barwami, a w święta oświetlana jest adekwatnie do dnia.
+        W Szczecinie znajduje się również nagradzana w wielu konkursach architektonicznych filharmonia. Niczym warszawski PKiN jest oświetlany różnobarwnymi światłami, a na wydarzenia przybiera kolory adekawtane do imprezy czy też święta.
 </p>
         <img src="filhar.jpg" alt="filharmonia" width="250" height="175">
 
