--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       <li><a href="https://www.szczecin.eu/pl">Strona miasta Szczecin</a></li>
       <li><a href="https://www.facebook.com/wszczeciniepl/">Strona Fb "wSzczecinie"</a></li>
       <li><a href="https://filharmonia.szczecin.pl/pl">Filharmonia Szczecińska</a></li>
+      <li><a href="https://www.tripadvisor.com/Attractions-g274736-Activities-Szczecin_Western_Pomerania_Province_Western_Poland.html">TripAdvisor</a></li>
     </ul>
   </li>
     </ul>
