--- a/bar rab.html
+++ b/bar rab.html
@@ -27,6 +27,9 @@
   <h1 class="rainbow">
     UPDATE: Już wymyśliłem hasło i nauczyłem się je dodać. Mam nadzieje, że nie było ciężkie, bo powinnaś wiedzieć takie rzeczy jeśli chcesz odwiedzić Szczecin.
   </h1>
+   <h1 class="rainbow">
+    UPDATE 2:Założyłem z 3 konta na podejrzanych stronach żeby móc wstawić to cudo do internetu, ale jak widać, udało się. 
+   </h1>
 
 </table>
 </body>
