--- a/bar rab.html
+++ b/bar rab.html
@@ -21,8 +21,9 @@
 </table>
 <table>
   <h1 class="rainbow">
-    Droga Julio, jeśli to czytasz to znaczy, że udało ci się odgadnąć jakieś wymagające ale nie ciężkie hasło, jeszcze nie wiem jakie, bo pisze te informację przed wymyśleniem go. Nawet jeszcze nie wiem jak się dodaje hasło do strony.
-  </h1>
+     Droga Julio, jeśli to czytasz to znaczy, że prostym jest dla ciebie odgadnięcie słynnej szczecińskiej restauracji, serwującej tradycyjny szczeciński przysmak, to z wielką radością zapraszam Cię, w moje skromne progi. Zaproszenie nie trafi terminu, ale im szybciej się pojawisz tym szybiej spróbujesz pysznej frytbuły.
+    Wraz zaproszeniem przychodzi kupon na jedną darmową potrawę w restauracji "Bar rab". Niestety nie mam dwóch lokum, więc jedyny nocleg jaki jestem w stanie zaoferować to na tarasie.
+    </h1>
 
   <h1 class="rainbow">
     UPDATE: Już wymyśliłem hasło i nauczyłem się je dodać. Mam nadzieje, że nie było ciężkie, bo powinnaś wiedzieć takie rzeczy jeśli chcesz odwiedzić Szczecin.
