--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <table class="fixed">
-    <caption>Kompedium wiedzy na temat Szczecina</caption>
+    <caption>Kompendium wiedzy na temat Szczecina</caption>
     <tr class="tableformat">
     <td class="sparkling">
       <h3>Menu strony</h3>
@@ -66,8 +66,8 @@
 </center>
 </h3>
 <img src="frytbula.png" alt="frytbula" width="386" height="216">
-<p class="srodek">Głównym daniem, które powinien chociaż spróbować każdy odwiedzjący, niezależnie od wieku, płci czy majątku, MUSI chociaż spróbować
-  tego delikatesu regionalnego jakim jest frytbuła. No co tu dużo mówić, jest to bułka z frytkami z dodatkiem sosu. Ludzie twierdzą,
+<p class="srodek">Głównym daniem, które MUSI spróbować każdy odwiedzjący, niezależnie od wieku, płci czy majątku,
+  jest delikates regionalny znany jako frytbuła. No co tu dużo mówić, jest to bułka z frytkami z dodatkiem sosu. Ludzie twierdzą,
   że sos cacyki jest obrzydliwy, ale jako prawdziwy koneser polecam ten sos na pierwszy i każdy raz jako, że jest to po prostu sos czosnkowy Deluxe.
 
 
@@ -99,9 +99,9 @@
       </center>
       </h3>
       <p class="srodek">
-        Szczecińskie puby nieszególnie odbiegają jakością czy też zaopatrzeniem w porównaniu do warszawskich, ale jest jedno miejsce, które jest wyjątkowe ze względu na swój niecodzienny klimat.
-        Jest to mianowicie Český Film. Pub, w którym puszczane są filmy, z kranów leją się kraftowe piwa, a sala wypełniona jest fotelami kinowymi jak i również zwykłymi stolikami. Idealne miejsce dla koneserów trunków niskoalkoholowych jak i fanów dobrego kina.
-        Świetna alterantywa na typową randkę w kinie.
+        Szczecińskie puby nieszczególnie odbiegają jakością czy też zaopatrzeniem w porównaniu do warszawskich, ale jest jedno miejsce, które jest wyjątkowe ze względu na swój niecodzienny klimat.
+        Jest to mianowicie Český Film. Pub, w którym puszczane są filmy, z kranów leją się kraftowe piwa, a sala wypełniona jest fotelami kinowymi oraz zwykłymi stolikami jeśli ktoś jest nastawiony na rozmowę niżeli na oglądanie filmu. Idealne miejsce dla koneserów trunków alkoholowych niskoprocentowych jak i fanów dobrego kina.
+        Świetna alternatywa na typową randkę w kinie.
       </p>
       <img src="czeski.png" alt="czeski_film" height="200">
 
@@ -112,7 +112,7 @@
       </center>
       </h3>
       <p class="srodek">
-        Jeśli masz już dosyć miejskiego zgiełku i chcesz w końcu poodychać świerzym powietrzem, to spacer wokół jeziora Głębokiego jest idealną opcją. Pełno zieleni i śpiewających ptaków, zachwyci niejednego gbura. Trasa zajmuje około 1,5h, więc jest to idealne miejsce na poobiadowy, niedzielny spacerek.
+        Jeśli masz już dosyć miejskiego zgiełku i chcesz w końcu poodychać świeżym powietrzem, to spacer wokół Jeziora Głębokiego jest idealną opcją. Pełno zieleni i śpiewających ptaków, zachwyci niejednego gbura. Trasa zajmuje około 1,5h, więc jest to idealne miejsce na poobiadowy, niedzielny spacerek.
         Nazwę zawdzięcza swoją maksymalną głębokością 6 m.
       </p>
       <img src="glebokie.jpg" alt="glebokie" height="250">
@@ -122,7 +122,7 @@
       </center>
       </h3>
       <p class="srodek">
-          Drugim przepięknym jeziorem jest jezioro szmaragdowe, położone na drugim końcu Szczecina względem Głębokiego. Wokół jeziora jest pełno ścieżek zdrowia, także każda wycieżka nad ten akwen może całkowicie nową przygodą. Nazwę swą zawdzięcza, a jakże, swojemu niecodziennemu kolorowi, powstałemu na wskutek zawartości węglanu wapnia, pochodzącego z rozpuszczania kalcytu.
+          Drugim przepięknym jeziorem jest Jezioro Szmaragdowe, położone na drugim końcu Szczecina względem Głębokiego. Wokół jeziora jest pełno ścieżek zdrowia, także każda wycieżka nad ten akwen może stać się całkowicie nową przygodą. Nazwę swą zawdzięcza, a jakże, swojemu niecodziennemu kolorowi, powstałemu na wskutek zawartości węglanu wapnia, pochodzącego z rozpuszczania kalcytu.
       </p>
       <img src="szmar.jpg" alt="szmaragdowe" height="250">
 
