--- a/bar rab.html
+++ b/bar rab.html
@@ -21,8 +21,8 @@
 </table>
 <table>
   <h1 class="rainbow">
-     Droga Julio, jeśli to czytasz to znaczy, że prostym jest dla ciebie odgadnięcie słynnej szczecińskiej restauracji, serwującej tradycyjny szczeciński przysmak, to z wielką radością zapraszam Cię, w moje skromne progi. Zaproszenie nie trafi terminu, ale im szybciej się pojawisz tym szybiej spróbujesz pysznej frytbuły.
-    Wraz zaproszeniem przychodzi kupon na jedną darmową potrawę w restauracji "Bar rab". Niestety nie mam dwóch lokum, więc jedyny nocleg jaki jestem w stanie zaoferować to na tarasie.
+     Droga Julio, jeśli to czytasz to znaczy, że prostym jest dla Ciebie odgadnięcie słynnej szczecińskiej restauracji, serwującej tradycyjny szczeciński przysmak. Z wielką radością zapraszam Cię, w moje skromne progi. Zaproszenie nie traci terminu, ale im szybciej się pojawisz tym szybciej spróbujesz pysznej frytbuły.
+    Wraz zaproszeniem przychodzi kupon na jedną darmową potrawę w restauracji "Bar rab". Niestety nie mam dwóch lokum, więc jedyny nocleg jaki jestem w stanie zaoferować to na tarasie (żart, możesz spać w środku. Ale śmieszny żart! co nie?).
     </h1>
 
   <h1 class="rainbow">
@@ -31,7 +31,9 @@
    <h1 class="rainbow">
     UPDATE 2:Założyłem z 3 konta na podejrzanych stronach żeby móc wstawić to cudo do internetu, ale jak widać, udało się. 
    </h1>
-
+<h1 class="rainbow">
+    UPDATE 3:Sory za te problemy techniczne, chyba już wszystko jest git.
+   </h1>
 </table>
 </body>
 
