--- a/bar rab.html
+++ b/bar rab.html
@@ -21,7 +21,7 @@
 </table>
 <table>
   <h1 class="rainbow">
-     Droga Julio, jeśli to czytasz to znaczy, że prostym jest dla Ciebie odgadnięcie słynnej szczecińskiej restauracji, serwującej tradycyjny szczeciński przysmak. Z wielką radością zapraszam Cię, w moje skromne progi. Zaproszenie nie traci terminu, ale im szybciej się pojawisz tym szybciej spróbujesz pysznej frytbuły.
+     Droga Julio, jeśli to czytasz to znaczy, że prostym jest dla Ciebie odgadnięcie słynnej szczecińskiej restauracji, serwującej tradycyjny szczeciński przysmak. Z wielką radością zapraszam Cię, w moje skromne progi. Zaproszenie jest bezterminowe, ale im szybciej się pojawisz tym szybciej spróbujesz pysznej frytbuły.
     Wraz zaproszeniem przychodzi kupon na jedną darmową potrawę w restauracji "Bar rab". Niestety nie mam dwóch lokum, więc jedyny nocleg jaki jestem w stanie zaoferować to na tarasie (żart, możesz spać w środku. Ale śmieszny żart! co nie?).
     </h1>
 
